[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Bullet/BulletGrenadeLauncher.png" type="Texture" id=1]
[ext_resource path="res://src/Bullet/GLauncher.gd" type="Script" id=2]
[ext_resource path="res://src/Bullet/CollisionDetector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[sub_resource type="Animation" id=4]
resource_name = "FlipLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15, 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 15 ]
}

[node name="GLauncher2" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionDetector" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
shape = SubResource( 6 )

[node name="ExplosionDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 259

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionDetector"]
shape = SubResource( 3 )

[node name="End" type="Position2D" parent="."]
position = Vector2( 0, 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 3
frame = 15

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FlipLeft = SubResource( 4 )
anims/FlipRight = SubResource( 5 )

[connection signal="area_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_area_entered"]
[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
[connection signal="body_entered" from="ExplosionDetector" to="." method="_on_ExplosionDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
